# F1-AI-powered-pitstop-analyzer

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vercel.json
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
backend/: Dockerfile  README.md
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py  logging.py
backend/app/data_engineering/: __init__.py  cli.py  config.py  database.py  pipeline.py  quality.py  records.py  reports.py  repository.py  retry.py  time.py  validation.py
backend/app/domain/: __init__.py
backend/app/schemas/: circuits.py  drivers.py  laps.py  live.py  predictions.py  race_data.py  sessions.py  simulations.py  strategy.py  teams.py  telemetry.py
backend/app/services/: __init__.py  live_race.py  model_inference.py  race_data.py  strategy_simulator.py
backend/app/workers/: __init__.py
backend/tests/integration/: README.md
backend/tests/unit/: test_live.py  test_race_data.py  test_strategy_simulator.py
datasets/: README.md
docs/: architecture.md  data-engineering.md  deployment-guide.md  folder-structure.md  machine-learning.md  production-checklist.md  roadmap.md
docs/api/: api-specification.md  openapi.yaml
docs/database/: postgresql-schema.sql  supabase-schema.md
docs/diagrams/: er-diagram.mmd
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
infra/docker/: README.md
infra/scripts/: build_datasets.ps1  run_etl.ps1  seed_local.ps1
infra/supabase/: config.toml
ml/: Dockerfile  README.md
ml/tests/: README.md  test_dataset_validation.py  test_feature_builders.py  test_model_registry.py  test_predictor.py
notebooks/: README.md
(+94 files in other folders)
