[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stintsync"
version = "0.1.0"
description = "AI-Powered Formula 1 Strategy & Race Intelligence Platform with FastAPI, Next.js, PostgreSQL, Supabase, and ML scaffolding."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "fastf1>=3.8.0",
  "httpx>=0.27.0",
  "joblib>=1.4.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "psycopg[binary]>=3.2.0",
  "pyarrow>=16.1.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.5.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "structlog>=24.4.0",
  "tenacity>=8.5.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "ruff>=0.5.0"
]
ml = [
  "catboost>=1.2.7",
  "lightgbm>=4.5.0",
  "mlflow>=2.15.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.14.0",
  "shap>=0.46.0",
  "xgboost>=2.1.0"
]

[project.scripts]
f1-etl = "app.data_engineering.cli:main"
f1-build-datasets = "f1_strategy_ml.cli:main"
f1-train-models = "f1_strategy_ml.training.cli:main"

[tool.setuptools.packages.find]
where = ["backend", "ml/src"]
include = ["app*", "f1_strategy_ml*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend", "ml/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = ["backend", "ml/src"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "ml/tests"]
asyncio_mode = "auto"
